--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   <body>
     <!-- Nav -->
     <nav class="navigation">
+      <div id="nav-icon">
+        <span></span>
+        <span></span>
+      </div>
+      <a href="#" class="logo"><i class="fab fa-apple"></i></a>
       <ul class="main-nav">
-        <li>
-          <a href="#" class="logo"><i class="fab fa-apple"></i></a>
-        </li>
         <li><a href="#">Mac</a></li>
         <li><a href="#">iPad</a></li>
         <li><a href="#">iPhone</a></li>
@@ -25,13 +27,9 @@
         <li><a href="#">TV</a></li>
         <li><a href="#">Music</a></li>
         <li><a href="#">Support</a></li>
-        <li>
-          <a href="#"><i class="fas fa-search"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fas fa-shopping-bag"></i></a>
-        </li>
       </ul>
+      <a href="#" class="hidden"><i class="fas fa-search"></i></a>
+      <a href="#"><i class="fas fa-shopping-bag"></i></a>
     </nav>
     <!-- Showcase -->
     <section class="showcase">
